changed baseurl for url

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Eirene
-description: 
+description: >
   Levando famílias à harmonia
-baseurl: "/" 
+
+baseurl: "" 
 url: "https://eirenedobrasil.netlify.com" 
 
 permalink: pretty
