bunch of updates

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: >
   Levando famílias à harmonia
 
 baseurl: "" 
-url: "https://eirenedobrasil.netlify.com" 
+url: "https://eirene.com.br" 
 
 permalink: pretty
 
